Fix spacing

--- a/assets/css/fsgp-style.css
+++ b/assets/css/fsgp-style.css
@@ -47,8 +47,6 @@
   border-left: solid 1px #8a8a8a;
 }
 
-.score-table th, tr, td {white-space: nowrap;}
-
 .score-table th, tr {border: 1px solid #000000;}
 .score-table td {
   border-right: solid 1px #080808; 
